--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_dashboard">dashboard</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_inbox_tab">InboxTab</string>
 </resources>
