--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,10 @@
     <string name="fb_login_protocol_scheme">fb1497155203735641</string>
 
 
+    <string name="instagram_client_id">1669cbcf37994f0fb1c1b4ee97ed54e6</string>
+    <string name="instagram_client_secret">70d6d7783f9d4d4a82beb4f70b5894f8</string>
+    <string name="instagram_redirect_uri">http://24crafts.tk:3000/login/instagram/callback</string>
+
     <string-array name="who">
         <item>Who</item>
         <item>"Director"</item>
