--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,8 @@
 
     </string-array>
 
-    <string name="reg_email_text">Please Check Your email for instructions on resetting your password</string>
+    <string name="reg_email_text">Please Check Your email for further
+        instructions</string>
     <string name="unreg_email_text">Email Address Not Found. Kindly Register</string>
 
     <string name="open_drawer">Open Navigation Drawer</string>
